@@ -73,6 +73,7 @@ We have received patches from the following people, thanks!
   o Håkan Olsson
   o Jakob Schlyter
   o Paul Wouters
+  o Simon Vallet
 
 
 KNOWN ISSUES
