@@ -49,6 +49,8 @@ enum ldns_enum_status
 	LDNS_STATUS_CRYPTO_NO_RRSIG,
 	LDNS_STATUS_CRYPTO_NO_DNSKEY,
 	LDNS_STATUS_CRYPTO_NO_TRUSTED_DNSKEY,
+	LDNS_STATUS_CRYPTO_NO_DS,
+	LDNS_STATUS_CRYPTO_NO_TRUSTED_DS,
 	LDNS_STATUS_CRYPTO_NO_MATCHING_KEYTAG_DNSKEY,
 	LDNS_STATUS_CRYPTO_VALIDATED,
 	LDNS_STATUS_CRYPTO_BOGUS,
